--- a/index.html
+++ b/index.html
@@ -975,8 +975,12 @@
               return undefined;
           if(key[key.length-1].name == 'Start')
               return undefined;
-          if(key[key.length-1].name == 'End')
+          if(key[key.length-1].name == 'End') {
               key.pop()
+              if(name == 'End') {
+                  name = key[key.length-1].name
+              }
+          }
           key = key.slice(0,-1).map(k => k.name).join('::')
           if(key in _counters) {
               if(name in _counters[key])
