--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
                   }
                   to.push( val )
               } else {
-                  console.log("unexpected object key", key);
+                  console.log("unexpected object key", key, vals);
               }
           }
           //console.log(to);
