Clear PROGRESS on update

--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,7 @@
           Object.values(SEGMENTS).forEach(g => g.group.clearLayers())
           nsegments = 1;
           SEGMENTS = {};
+          PROGRESS = {};
           nlines = 1;
           notes_class = "even";
           counter_reset();
