Add Missing mappct items

--- a/index.html
+++ b/index.html
@@ -1086,12 +1086,20 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           Bubbulfrog: {},
           Cave: {},
           Well: {},
+          Dispenser: {},
+          Fairy: {},
+          Tear: {},
+          Tablet: {},
+          Special: {},
+          Shop: {},
+          Location: {},
           'Enemy::Talus': {},
           'Enemy::Gleeok': {},
           'Enemy::Hinox': {},
           'Enemy::Frox': {},
           'Enemy::Molduga': {},
           'Enemy::FluxConstruct': {},
+          'mappct': {},
       };
       function counter_reset() {
           Object.keys(_counters).forEach(k => {_counters[k] = {};});
